# madagascar-penguins

./: .gitignore  INSTALL.md  MANIFEST.in  README.md  agents.py  config.py  install.bat  install.sh  main.py  pyproject.toml  requirements.txt  run.bat  setup.ps1  setup_wizard.py
agents/: __init__.py  base_agent.py  execution_agent.py  kowalski.py  market_analyst.py  news_analyst.py  private.py  rico.py  risk_manager_agent.py  skipper.py  trade_engine.py  validator.py
assets/: placeholder.txt
core/: __init__.py  bot_controller.py  circuit_breaker.py  data_manager.py  engine.py  market_structure.py  ml_health.py  ml_model.py  pattern_tracker.py  performance_monitor.py  risk_manager.py  stats_tracker.py  strategy.py
core/exchange/: __init__.py  base_exchange.py  binance_exchange.py  bitget_exchange.py  bybit_exchange.py  ccxt_exchange.py  gateio_exchange.py  kraken_exchange.py  (+4 more)
orchestrator/: __init__.py  graph.py  state.py
strategies/: __init__.py  _template.py  asian_range_breakout.py  base_strategy.py  bayesian_kelly.py  bb_sniper.py  breakout_follow_trend.py  btc_directional_trend.py  cci_surge.py  confluence_engine.py  crypto_ncs.py  ema_slope_rsi_osc.py  fib_sniper_smc.py  flowrise_bot.py  gann_phases.py  gxg_trend_engine.py  ha_rapid_scalper.py  ha_signals_6f.py  hh_hl_swing_trend.py  ict_2022_nas100.py  ict_breaker_block.py  ict_judas_swing.py  ict_optimal_trade_entry.py  ict_silver_bullet.py  institutional_pro.py  liberty_elite.py  liquidity_sweeps.py  lucky13_scalper.py  macro_regime_2ema.py  martingale_sfp.py  masu_v12.py  multi_factor_confluence.py  norn_weave.py  nq_pivot_pulse.py  nq_super_scalper.py  omni_trend_scalper.py  pa_engulfing_ob.py  pa_supply_demand.py  pivot_vwap.py  precision_edge.py  (+20 more)
utils/: __init__.py  gamma_scanner.py  mt5_manager.py  news_fetcher.py  options_tools.py  paper_trading.py  telegram_notifier.py
