[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name            = "madagascar-penguins"
version         = "1.0.0"
description     = "Madagascar Penguins — Multi-agent AI trading bot (Skipper · Kowalski · Rico · Private)"
readme          = "README.md"
requires-python = ">=3.10"

dependencies = [
    # ── Core ──────────────────────────────────────────────────────
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "imbalanced-learn>=0.11.0",
    "xgboost>=2.0.0",
    "pytz>=2024.1",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",

    # ── Multi-exchange (Binance, Bybit, OKX, Kraken …) ────────────
    "ccxt>=4.3.0",

    # ── LangGraph orchestrator ─────────────────────────────────────
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",

    # ── LLM provider SDKs ─────────────────────────────────────────
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "google-generativeai>=0.8.0",

    # ── Free news sources ─────────────────────────────────────────
    "feedparser>=6.0.10",
    "beautifulsoup4>=4.12.0",
    "yfinance>=0.2.36",
]

[project.optional-dependencies]
# MT5 only works on Windows — install separately if needed
mt5     = ["MetaTrader5>=5.0.45"]
# TA-Lib requires a C library — see installation note below
talib   = ["TA-Lib>=0.4.28"]

[project.scripts]
# After install, users can run:  madagascar-penguins
madagascar-penguins = "main:main"

[tool.setuptools.packages.find]
# Auto-discover all packages (core, agents, strategies, utils, orchestrator)
where = ["."]
exclude = ["__pycache__", "*.pyc", ".env*", "tests*"]

[tool.setuptools.package-data]
# Include non-Python files that the bot needs at runtime
"*" = [".env.example"]
